--- a/index.html
+++ b/index.html
@@ -98,6 +98,20 @@
 <article class="card" id="housing"><h2>Housing Price Index</h2><p>Explore regional housing price indexes with state filters, Top/Bottom rankings, and percentile views. Single‑file dashboard optimized for GitHub Pages.</p><ul><li>Large legend + search</li><li>Top/Bottom N &amp; percentiles</li><li>PNG &amp; CSV export</li></ul><div class="cta"><a class="btn" href="/housing/housing.html" aria-label="Open Housing Price Index Dashboard">Open Housing Dashboard</a></div></article>
 <article class="card" id="rank"><h2>My Global Rank (Fun)</h2><p>Enter your basics (country, gender, age, health, height/weight, wealth, income, kids, parents) and see your playful <strong>worldwide rank</strong> among ~8.1B people. Client‑side only, single file.</p><ul><li>Inputs stay in your browser</li><li>Wealth &amp; income toy percentiles</li><li>Simple charts &amp; fun facts</li></ul><div class="cta"><a class="btn" href="rank.html" aria-label="Open My Global Rank Tool">Open Global Rank</a></div></article>
 <article class="card" id="golf"><h2>Golf Handicap Ranking</h2><p>Calculate your golf handicap and see your global ranking among golfers worldwide. Interactive dashboard with handicap distribution charts and driving distance statistics.</p><ul><li>Personal handicap calculator</li><li>Global ranking by country &amp; gender</li><li>Driving distance statistics</li></ul><div class="cta"><a class="btn" href="https://stberry7.github.io/golf_rank.html" aria-label="Open Golf Handicap Ranking Calculator">Open Golf Ranking</a></div></article>
+
+<article class="card" id="english">
+  <h2>English Study</h2>
+  <p>Organized English vocabulary, expressions, pronunciation guides, and study notes curated for daily practice.</p>
+  <ul>
+    <li>Words & idioms with meanings</li>
+    <li>Pronunciation & usage notes</li>
+    <li>Continuously updated study log</li>
+  </ul>
+  <div class="cta">
+    <a class="btn" href="english.html" aria-label="Open English Study">Open English Study</a>
+  </div>
+</article>
+
 </section>
 
 <aside class="explainer" id="how-to">
